kubernetes-manifests/extras/frontend-virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtualservice
spec:
  hosts:
    - "*"  # Replace with your domain or use *
  gateways:
    - url-shortner-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend-service.default.svc.cluster.local
            port:
              number: 3001
